- Fix button text overflow - Fix local parser, ignore data-uri's

--- a/src/co/common/button/index.module.styl
+++ b/src/co/common/button/index.module.styl
@@ -22,7 +22,6 @@
     > * {
         white-space: nowrap;
         overflow: hidden;
-        overflow: clip;
         text-overflow: ellipsis;
         word-wrap: break-word
         pointer-events: none
